--- a/app/src/main/res/layout/activity_pizzacustomizer.xml
+++ b/app/src/main/res/layout/activity_pizzacustomizer.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@color/black"
+        android:background="@color/white"
         android:gravity="center|top"
         android:orientation="vertical"
         android:padding="10dp"
@@ -29,17 +29,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="50dp"
             android:gravity="center"
             android:text="@string/pizza_customizer"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="34sp" />
+
+        <ImageView
+            android:id="@+id/PizzaImage"
+            android:layout_width="106dp"
+            android:layout_height="76dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/pepperoni" />
 
         <RadioGroup
             android:id="@+id/flavorGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
             android:background="@color/white"
             android:orientation="horizontal"
             android:padding="5dp">
@@ -68,7 +75,6 @@
             android:id="@+id/sizeGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
             android:background="@color/white"
             android:clickable="true"
             android:focusable="true"
@@ -81,6 +87,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="calculateCosts"
                 android:text="@string/small" />
 
             <com.google.android.material.chip.Chip
@@ -88,6 +95,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="calculateCosts"
                 android:text="@string/medium" />
 
             <com.google.android.material.chip.Chip
@@ -95,6 +103,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="calculateCosts"
                 android:text="@string/large" />
         </com.google.android.material.chip.ChipGroup>
 
@@ -107,6 +116,7 @@
             android:background="@color/white"
             android:clickable="true"
             android:focusable="true"
+            android:onClick="calculateCosts"
             android:padding="5dp"
             app:chipSpacing="5dp"
             app:chipSpacingHorizontal="5dp"
@@ -119,88 +129,124 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/bacon" />
+                android:onClick="calculateCosts"
+                android:text="@string/bacon"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/extra_cheese"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/extra_cheese" />
+                android:onClick="calculateCosts"
+                android:text="@string/extra_cheese"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/tomato"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tomato" />
+                android:onClick="calculateCosts"
+                android:text="@string/tomato"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/sausage"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sausage" />
+                android:onClick="calculateCosts"
+                android:text="@string/sausage"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/pineapple"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/pineapple" />
+                android:onClick="calculateCosts"
+                android:text="@string/pineapple"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/peppers"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/peppers" />
+                android:onClick="calculateCosts"
+                android:text="@string/peppers"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/pepperoni"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/pepperoni" />
+                android:onClick="calculateCosts"
+                android:text="@string/pepperoni"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/onions"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/onions" />
+                android:onClick="calculateCosts"
+                android:text="@string/onions"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/mushrooms"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/mushrooms" />
+                android:onClick="calculateCosts"
+                android:text="@string/mushrooms"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/ham"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/ham" />
+                android:onClick="calculateCosts"
+                android:text="@string/ham"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/black_olives"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/olives" />
+                android:onClick="calculateCosts"
+                android:text="@string/olives"
+                android:textSize="12sp" />
 
         </com.google.android.material.chip.ChipGroup>
 
-        <Button
-            android:id="@+id/submitPizzaButton"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="334dp"
             android:layout_height="wrap_content"
-            android:onClick="submitPizza"
-            android:padding="15dp"
-            android:text="@string/submit"
-            android:textSize="24sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/Total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/dollar" />
+
+            <Button
+                android:id="@+id/submitPizzaButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="submitPizza"
+                android:padding="15dp"
+                android:text="@string/submit"
+                android:textSize="16sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
